Images not showing up in browser bug

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: url ('/media/background.png') no-repeat center center fixed;
+    background-image: url('/media/header.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: rgb(12, 106, 150);
